@@ -1,3 +1,5 @@
+2006/6/19 -- released version 20060619_trunk
+
 2006/6/18 -- released version 20060618_trunk
 
 2006/6/17 -- released version 20060617_trunk
